[package]
name = "async-tar-rs"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Alessandro Chitolina <alekitto@gmail.com>"]
homepage = "https://github.com/alekitto/async-tar-rs"
repository = "https://github.com/alekitto/async-tar-rs"
documentation = "https://docs.rs/async-tar-rs"
license = "MIT OR Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2021"
exclude = ["tests/archives/*"]

description = """
A Rust implementation of a TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"], optional = true }
filetime = "0.2.8"
futures = "0.3"
pin-project = "1.0.8"
tokio = { version = "1.24.0", features = ["fs", "io-util", "io-std", "rt"], optional = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
tokio = { version = "1.24.0", features = ["fs", "io-util", "io-std", "macros", "rt", "rt-multi-thread", "test-util"] }
static_assertions = "1.1.0"
tempfile = "3"

[target."cfg(unix)".dependencies]
libc = "0.2"
xattr = { version = "1.3", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.5"

[features]
default = ["tokio", "xattr"]
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]
