[package]
name = "async-tar-rs"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Alessandro Chitolina <alekitto@gmail.com>"]
homepage = "https://github.com/alekitto/async-tar-rs"
repository = "https://github.com/alekitto/async-tar-rs"
documentation = "https://docs.rs/async-tar-rs"
license = "MIT/Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2021"
exclude = ["tests/archives/*"]

description = """
A Rust implementation of a TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
async-std = { version = "1", optional = true }
filetime = "0.2"
futures-core = "0.3"
pin-project = "1"
tokio = { version = "1", optional = true, features = ["fs", "io-util", "sync"] }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-test = "0.4"

[target."cfg(unix)".dependencies]
libc = "0.2"
xattr = { version = "1.0", optional = true }

[features]
default = ["tokio", "xattr"]
async-std = ["dep:async-std"]
tokio = ["dep:tokio", "dep:tokio-stream"]
